# MemLink

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/memlink-cli/: Cargo.toml
crates/memlink-cli/src/: main.rs
crates/memlink-evaluator/: Cargo.toml
crates/memlink-evaluator/src/: lib.rs
crates/memlink-memory/: Cargo.toml
crates/memlink-memory/src/: lib.rs
crates/memlink-memory/tests/: sqlite_memory.rs
crates/memlink-observe/: Cargo.toml
crates/memlink-observe/src/: lib.rs
crates/memlink-observe/tests/: process_snapshot.rs
crates/memlink-protocol/: Cargo.toml
crates/memlink-protocol/src/: lib.rs
crates/memlink-runtime/: Cargo.toml
crates/memlink-runtime/src/: lib.rs
crates/memlink-runtime/tests/: runtime_flow.rs
crates/memlink-sandbox/: Cargo.toml
crates/memlink-sandbox/src/: lib.rs
crates/memlink-sandbox/tests/: restricted_process.rs
crates/memlink-state/: Cargo.toml
crates/memlink-state/src/: lib.rs
crates/memlink-state/tests/: state_store.rs
crates/memlink-transport/: Cargo.toml
crates/memlink-transport/src/: lib.rs
crates/memlink-transport/tests/: unix_socket.rs
docs/: ACCEPTANCE.md  ARCHITECTURE.md  COMPLETION_AUDIT.md  DEMO_SCRIPT.md  DEPLOYMENT.md  ENHANCEMENTS.md  EXPERIMENT_REPORT.md  SUBMISSION.md
scripts/: package.sh  record_demo.sh  verify.sh
suites/: linked_tasks.toml
tasks/: a1.toml
