[workspace]
members = [
  "crates/memlink-protocol",
  "crates/memlink-state",
  "crates/memlink-memory",
  "crates/memlink-evaluator",
  "crates/memlink-runtime",
  "crates/memlink-cli",
  "crates/memlink-sandbox",
  "crates/memlink-transport",
  "crates/memlink-observe",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/ai4race/MemLink"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
blake3 = "1.8.2"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
hex = "0.4.3"
postcard = { version = "1.1.1", features = ["alloc"] }
rusqlite = { version = "0.40.1", features = ["bundled", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "time", "fs", "sync", "io-util", "process", "net"] }
toml = "0.9.0"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tempfile = "3.20.0"
