[package]
name = "memlink-evaluator"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
memlink-protocol = { path = "../memlink-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
