[package]
name = "memlink-memory"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
memlink-protocol = { path = "../memlink-protocol" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
rusqlite.workspace = true
