[package]
name = "memlink-observe"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
