[package]
name = "memlink-protocol"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
postcard.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
