[package]
name = "memlink-runtime"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
memlink-evaluator = { path = "../memlink-evaluator" }
memlink-memory = { path = "../memlink-memory" }
memlink-protocol = { path = "../memlink-protocol" }
memlink-sandbox = { path = "../memlink-sandbox" }
memlink-state = { path = "../memlink-state" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
