[package]
name = "memlink-sandbox"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
memlink-protocol = { path = "../memlink-protocol" }
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
